--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,13 +22,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "lint-staged":{
+  "lint-staged": {
     "src/**/*.js": [
-      "prettier --write .", "git add"
+      "prettier --write .",
+      "git add"
     ]
   },
-  "husky":{
-    "hooks":{
+  "husky": {
+    "hooks": {
       "pre-commit": "lint-staged"
     }
   },
