--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3"
   }
 }
