--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "prettier --write .",
+      "prettier --write --use-tabs .",
       "git add"
     ]
   },
