--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "prettier --write --use-tabs .",
+      "prettier --write .",
       "git add"
     ]
   },
