--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "prettier --write .",
-      "git add"
-    ]
+      "prettier --write"
+   ]
   },
   "husky": {
     "hooks": {
